--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
       <div class="party__box-info">
         <h2 class="heading-secondary">
           <span class="party__offer">Plan your party</span>
-          <span class="party__location">at The Party Company</span>
+          <span class="party__location">at Perfect Party Inc.</span>
           <span class="party__time">(CS348 Project)</span>
         </h2>
           <a href="/dashboard"  class="info--btn">Take me there</a>
