--- a/templates/orderInfo.html
+++ b/templates/orderInfo.html
@@ -39,22 +39,17 @@
       <p class="lead">After information is verified, you may have a chance such that the order is being rejected due to stock or other reasons. Please contact our specialists for details and the payment will be reversed in 1-3 business days.</p>
     </div>
   </div>
-  <div class="row">
-    <div class="col-xs-12">
-      <p>For this demo, you may populate the fields with fake customer information.</p>
-      <button class="btn btn-warning" id="autofill">Autofill Customer Information</button>
-    </div>
-  </div>
+
 
   <div class="row">
     <div class="col-xs-12" >
       <div class="form-group">
         <label for="invittes">Number of Invittes</label>
-        <input type="invittes" id = "invittes" class="form-control" id="invittes" name="invittes" value="100" default>
+        <input type="invittes" id = "invittes" class="form-control" id="invittes" name="invittes" value="100" >
       </div>
       <div class="form-group">
         <label for="starttime">Party Start Time</label>
-        <input type="starttime" class="form-control" id="starttime" name="starttime" value='2019-01-01 00:00:01' default>
+        <input type="starttime" class="form-control" id="starttime" name="starttime" value='2019-01-01 00:00:01' >
       </div>
       <div class="form-group">
         <label for="closetime">Party Close Time</label>
