fix modal window

--- a/templates/adminDashboard.html
+++ b/templates/adminDashboard.html
@@ -425,9 +425,9 @@
                 <div class="block-info">
                   <div><em>Budget:&nbsp;&nbsp;</em><span>{{v1.budget}}</span></div>
                   <div><em>Pay Type:&nbsp;&nbsp;</em><span>{{v1.paid}}</span></div>
-                  <div><em>Order:&nbsp;&nbsp;</em><span><a href="#" data-toggle="modal" data-target="#reassign-salesop">click me</a></span></div>
+                  <div><em>Order:&nbsp;&nbsp;</em><span><a href="#" data-toggle="modal" data-target="#abc">click me</a></span></div>
                   <!-- Modal 'ASSIGN TO DESIGNER' -->
-                  <div class="modal fade" id="reassign-salesop" role="dialog">
+                  <div class="modal fade" id="abc" role="dialog">
                     <div class="modal-dialog">
 
                       <!-- Modal content-->
@@ -454,8 +454,8 @@
 
 
 
-                  <div><em>Customization:&nbsp;&nbsp;</em><span><a href="#" data-toggle="modal" data-target="#customize">details</a></span></div>
-                  <div class="modal fade" id="customize" role="dialog">
+                  <div><em>Customization:&nbsp;&nbsp;</em><span><a href="#" data-toggle="modal" data-target="#edf">details</a></span></div>
+                  <div class="modal fade" id="edf" role="dialog">
                     <div class="modal-dialog">
 
                       <!-- Modal content-->
@@ -751,9 +751,9 @@
                 <div class="block-info">
                   <div><em>Budget:&nbsp;&nbsp;</em><span>{{v2.budget}}</span></div>
                   <div><em>Pay Type:&nbsp;&nbsp;</em><span>{{v2.paid}}</span></div>
-                  <div><em>Order:&nbsp;&nbsp;</em><span><a href="#" data-toggle="modal" data-target="#reassign-salesop">click me</a></span></div>
+                  <div><em>Order:&nbsp;&nbsp;</em><span><a href="#" data-toggle="modal" data-target="#eee">click me</a></span></div>
                   <!-- Modal 'ASSIGN TO DESIGNER' -->
-                  <div class="modal fade" id="reassign-salesop" role="dialog">
+                  <div class="modal fade" id="eee" role="dialog">
                     <div class="modal-dialog">
 
                       <!-- Modal content-->
@@ -780,8 +780,8 @@
 
 
 
-                  <div><em>Customization:&nbsp;&nbsp;</em><span><a href="#" data-toggle="modal" data-target="#customize">details</a></span></div>
-                  <div class="modal fade" id="customize" role="dialog">
+                  <div><em>Customization:&nbsp;&nbsp;</em><span><a href="#" data-toggle="modal" data-target="#fff">details</a></span></div>
+                  <div class="modal fade" id="fff" role="dialog">
                     <div class="modal-dialog">
 
                       <!-- Modal content-->
